test/simple/typeerrors/Examples/PatNegateResult.hs
module PatNegateResult where

f :: Bool -> Int
f (- 3) = 5
